--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hello = \"Hello worl\""
+    "Hello = \"Hello world\"\n",
+    "hello"
    ]
   },
   {
